@@ -227,6 +227,33 @@ svexamplesdir = $(pkgdatadir)/examples/sv
 dist_svexamples_DATA = \
 	examples/sv/splash.lyx
 
+springerexamplesdir = $(pkgdatadir)/examples/springer
+dist_springerexamples_DATA = \
+	examples/springer/svmono_acknow.lyx \
+	examples/springer/svmono_acronym.lyx \
+	examples/springer/svmono_appendix.lyx \
+	examples/springer/svmono_book-master.lyx \
+	examples/springer/svmono_chapter.lyx \
+	examples/springer/svmono_dedication.lyx \
+	examples/springer/svmono_foreword.lyx \
+	examples/springer/svmono_glossary.lyx \
+	examples/springer/svmono_part.lyx \
+	examples/springer/svmono_preface.lyx
+	examples/springer/svmono_referenc.lyx \
+	examples/springer/svmono_solutions.lyx \
+	examples/springer/svmult_acknow.lyx \
+	examples/springer/svmult_acronym.lyx \
+	examples/springer/svmult_appendix.lyx \
+	examples/springer/svmult_author.lyx \
+	examples/springer/svmult_cblist.lyx \
+	examples/springer/svmult_dedication.lyx \
+	examples/springer/svmult_editor-master.lyx \
+	examples/springer/svmult_foreword.lyx \
+	examples/springer/svmult_glossary.lyx \
+	examples/springer/svmult_part.lyx \
+	examples/springer/svmult_preface.lyx \
+	examples/springer/svmult_referenc.lyx
+	
 thesisexamplesdir = $(pkgdatadir)/examples/thesis
 dist_thesisexamples_DATA = \
 	examples/thesis/Acknowledgments.lyx \
@@ -2133,31 +2160,7 @@ dist_templates_DATA = \
 
 springertemplatesdir = $(pkgdatadir)/templates/springer
 dist_springertemplates_DATA = \
-	templates/springer/svjour3.lyx \
-	templates/springer/svmono_acknow.lyx \
-	templates/springer/svmono_acronym.lyx \
-	templates/springer/svmono_appendix.lyx \
-	templates/springer/svmono_book-master.lyx \
-	templates/springer/svmono_chapter.lyx \
-	templates/springer/svmono_dedication.lyx \
-	templates/springer/svmono_foreword.lyx \
-	templates/springer/svmono_glossary.lyx \
-	templates/springer/svmono_part.lyx \
-	templates/springer/svmono_preface.lyx
-	templates/springer/svmono_referenc.lyx \
-	templates/springer/svmono_solutions.lyx \
-	templates/springer/svmult_acknow.lyx \
-	templates/springer/svmult_acronym.lyx \
-	templates/springer/svmult_appendix.lyx \
-	templates/springer/svmult_author.lyx \
-	templates/springer/svmult_cblist.lyx \
-	templates/springer/svmult_dedication.lyx \
-	templates/springer/svmult_editor-master.lyx \
-	templates/springer/svmult_foreword.lyx \
-	templates/springer/svmult_glossary.lyx \
-	templates/springer/svmult_part.lyx \
-	templates/springer/svmult_preface.lyx \
-	templates/springer/svmult_referenc.lyx
+	templates/springer/svjour3.lyx
 
 texdir = $(pkgdatadir)/tex
 dist_tex_DATA = \
