@@ -183,7 +183,8 @@ The following LyX key bindings have been changed:
 
 The following LyX documents have been moved:
 
-- all thesis template files have been moved to the examples folder
+- All thesis template files and the svmult and svmono template files have been
+  moved to the examples folder.
 
 
 The following metadata files have been added to the tarball:
